[package]
name = "rustycloud"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chrono = "0.4.38" # Apache 2.0 License
colored = "=2.1.0" # Mozilla Public License 2.0
sqlx = { version = "0.7.4", features = [ "runtime-async-std", "postgres", "mysql", "sqlite" ] } # Apache 2.0 License